syntax = "proto3";
package game;

option java_package = "com.zunf.tankbattletcpserver";
option java_outer_classname = "AuthProto";

message LoginRequest {
  string token = 1;
}

message LoginResponse {
  int32 code = 1;      // 0=成功，非0失败
  string message = 2;  // 错误信息
  int64 player_id = 3; // 成功时返回
  string trace_id = 4; // 可选：透传链路追踪
}
